--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
             gap: 8px;
             background-color: #F0F4F9;
 
-            border-radius: 8px;
+            border-radius: 20px;
 
             box-shadow: inset 1px 1px 1px white;
             width: 100%;
             max-width: 800px;
+
+            padding: 8px;
         }
 
         h1 {
